SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <formula>IF(  ISPICKVAL(Status__c, &apos;Approved&apos;),IF( Completion__c == 1 ,TODAY()  - Completion_Date__c + 1 , 1) , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days since the Schedule Item has been completed and the PO has not been Approved.</inlineHelpText>
    <label>Aging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>