SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Auto_Number1__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number1__c</fullName>
    <label>New PO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>