SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <description>Deprecated</description>
    <displayFormat>PO - {00000}</displayFormat>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>All PO # (DEP)</label>
    <type>AutoNumber</type>
</CustomField>