SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Address</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Bill To Address)</relationshipLabel>
    <relationshipName>Purchase_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>