SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Budget</description>
    <inlineHelpText>Budget the PO is associated with.</inlineHelpText>
    <label>Budget</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Budget__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>