SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Budget_Line__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Budget Line the PO is associated with.</inlineHelpText>
    <label>Budget Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Budget__c</field>
            <operation>equals</operation>
            <valueField>Budget_Item__c.Budget__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>