SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Order</label>
    <referenceTo>Change_Order__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>