SubBt/force-app/main/default/objects/Purchase_Order__c/fields/CO_Amount__c.field-meta.xml
<CustomField>
    <fullName>CO_Amount__c</fullName>
    <label>CO Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>