SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <inlineHelpText>Date the work was completed.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>