SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Contractor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Resource of the Contracting company assigned as a point of contact.</inlineHelpText>
    <label>Vendor Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>