SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Crew_Date__c.field-meta.xml
<CustomField>
    <fullName>Crew_Date__c</fullName>
    <inlineHelpText>When the crew is expected to show up for work.</inlineHelpText>
    <label>Crew Date</label>
    <type>Date</type>
</CustomField>