SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Customer_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Accepted_Date__c</fullName>
    <label>Customer Accepted Date</label>
    <type>Date</type>
</CustomField>