SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <inlineHelpText>Date the PO was approved.</inlineHelpText>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>