SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Date_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_Confirmed__c</fullName>
    <inlineHelpText>Date the Vendor accepted the PO.</inlineHelpText>
    <label>Date Vendor Accepted</label>
    <type>Date</type>
</CustomField>