SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <inlineHelpText>Date the PO was created.</inlineHelpText>
    <label>Date Created</label>
    <type>Date</type>
</CustomField>