SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Date_Lien_Release_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Lien_Release_Sent__c</fullName>
    <inlineHelpText>Date the Lien Release was sent for signature.</inlineHelpText>
    <label>Date Lien Release Re-Sent</label>
    <type>DateTime</type>
</CustomField>