SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Date_Lien_Release_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Lien_Release_Signed__c</fullName>
    <inlineHelpText>Date the Lien release was signed by Vendor.</inlineHelpText>
    <label>Date Lien Release Signed</label>
    <type>Date</type>
</CustomField>