SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Date_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Date_Ordered__c</fullName>
    <inlineHelpText>Date the Purchase Order was Ordered/Emailed to the Vendor.</inlineHelpText>
    <label>Date Ordered</label>
    <type>Date</type>
</CustomField>