SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <inlineHelpText>Date the Material was delivered.</inlineHelpText>
    <label>Date Delivered</label>
    <type>Date</type>
</CustomField>