SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Short description to identify the purpose of the Purchase Order.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>