SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Last_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Last_Emailed__c</fullName>
    <description>Last time a PO was sent.</description>
    <label>Last Emailed</label>
    <type>DateTime</type>
</CustomField>