SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time__c</fullName>
    <inlineHelpText>This is the number of days that you need to order this Purchase Order in advance.</inlineHelpText>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>