SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interior</fullName>
            </value>
            <value>
                <fullName>Exterior</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Garage</fullName>
            </value>
            <value>
                <fullName>Second Floor</fullName>
            </value>
            <value>
                <fullName>First Floor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>