SubBt/force-app/main/default/objects/Purchase_Order__c/fields/New_PO_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_PO_Amount__c</fullName>
    <label>New PO Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>