SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Old_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Old_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>