SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Original_Date_Lien_Release_Sent__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_Lien_Release_Sent__c</fullName>
    <inlineHelpText>Initial date the Lien Release was sent.</inlineHelpText>
    <label>Original Date Lien Release Sent</label>
    <type>DateTime</type>
</CustomField>