SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Over_Under_Paid__c.field-meta.xml
<CustomField>
    <fullName>Over_Under_Paid__c</fullName>
    <formula>(Paid_Amount__c-( PO_Total__c *  IF(ISBLANK(Completion__c),0,Completion__c )))/ (PO_Total__c *  IF(ISBLANK(Completion__c),0,Completion__c ) )

/*(buildertek__Paid_Amount__c-( buildertek__PO_Total__c *  buildertek__Completion__c ))/ (buildertek__PO_Total__c *  buildertek__Completion__c )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount Over/Under Paid based on Completion % and Amount Paid.</inlineHelpText>
    <label>Over/Under(-) Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>