SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <formula>NULLVALUE((Paid_Amount__c /PO_Total__c),1)

/*buildertek__Paid_Amount__c /buildertek__PO_Total__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of Payments made for this PO.</inlineHelpText>
    <label>Paid %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>