SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <inlineHelpText>Total Amount Paid from all Payments.</inlineHelpText>
    <label>Paid Amount</label>
    <summarizedField>Account_Payable__c.Payments__c</summarizedField>
    <summaryFilterItems>
        <field>Account_Payable__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid, Partially Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Payable__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>