SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Permit__c.field-meta.xml
<CustomField>
    <fullName>Permit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Permit the Purchase Order is waiting for approval on.</inlineHelpText>
    <label>Permit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Permit__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Permit__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>