SubBt/force-app/main/default/objects/Purchase_Order__c/fields/PO_Balance__c.field-meta.xml
<CustomField>
    <fullName>PO_Balance__c</fullName>
    <formula>PO_Total__c -  Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount still owed on the PO.</inlineHelpText>
    <label>PO Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>