SubBt/force-app/main/default/objects/Purchase_Order__c/fields/PO_Total__c.field-meta.xml
<CustomField>
    <fullName>PO_Total__c</fullName>
    <formula>PO_Amount__c + ( PO_Amount__c *  Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>PO Amount plus Tax.</inlineHelpText>
    <label>PO Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>