SubBt/force-app/main/default/objects/Purchase_Order__c/fields/PO_Type__c.field-meta.xml
<CustomField>
    <fullName>PO_Type__c</fullName>
    <label>PO Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>