SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Proejct_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Proejct_PO_Number__c</fullName>
    <formula>Project__r.Auto_Number__c &amp;&apos;-&apos;&amp; Auto_Number1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO #</label>
    <type>Text</type>
</CustomField>