SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <label>Project #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>