SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Projected_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Ordered_Date__c</fullName>
    <inlineHelpText>Based on the Lead Time from the Schedule Item this is the date you should be ordering the Purchase Order.</inlineHelpText>
    <label>Projected Ordered Date</label>
    <type>Date</type>
</CustomField>