SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Purchaser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchaser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders (Purchaser)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>