SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Work Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>