SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Req__c.field-meta.xml
<CustomField>
    <fullName>Req__c</fullName>
    <label>Req #</label>
    <type>TextArea</type>
</CustomField>