SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Required_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Required_Delivery_Date__c</fullName>
    <inlineHelpText>Date you expect/need the material delivered.</inlineHelpText>
    <label>Required Delivery Date</label>
    <type>Date</type>
</CustomField>