SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Retention__c.field-meta.xml
<CustomField>
    <fullName>Retention__c</fullName>
    <label>Retention %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>