SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Scheduled Item this PO is associated with.</inlineHelpText>
    <label>Schedule Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Task__c.Schedule__c</field>
            <operation>equals</operation>
            <valueField>$Source.Schedule__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>