SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this Address if you are creating Accounts for every Project.</description>
    <inlineHelpText>Address the items are to be shipped.</inlineHelpText>
    <label>Account Ship To Address</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders (Ship To Address)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>