SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <label>Ship To Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>United States</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>