SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Ship_To_Zip__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Zip__c</fullName>
    <label>Ship To Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>