SubBt/force-app/main/default/objects/Purchase_Order__c/fields/ShipToAddress__c.field-meta.xml
<CustomField>
    <fullName>ShipToAddress__c</fullName>
    <label>Ship To Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>