SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Sub_Contract__c.field-meta.xml
<CustomField>
    <fullName>Sub_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>