SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NET30</fullName>
            </value>
            <value>
                <fullName>NET60</fullName>
            </value>
            <value>
                <fullName>DUE ON RECEIPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>