SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Use_Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Use_Ship_To_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked the PO Ship To template will use this address.  Otherwise it will use the Project Address information for the Ship To address.</inlineHelpText>
    <label>Use Ship To Address</label>
    <type>Checkbox</type>
</CustomField>