SubBt/force-app/main/default/objects/Purchase_Order__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Account of the Contractor that is assigned to the PO and work.</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>