SubBt/force-app/main/default/objects/Purchase_Order__c/recordTypes/Existing_Purchase_Order.recordType-meta.xml
<RecordType>
    <fullName>Existing_Purchase_Order</fullName>
    <active>true</active>
    <label>Existing Purchase Order</label>
</RecordType>